Script base de datos ESP

--- a/App/TMApiDAO/TMApiDAO/appsettings.json
+++ b/App/TMApiDAO/TMApiDAO/appsettings.json
@@ -6,5 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Data source=(local);Initial Catalog=TaskManagmentDev;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  "ConnectionString": "Data source=(local);Initial Catalog=TaskManagmentDev;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
+  "Jwt": {
+    "Key": "",
+    "Issuer": "TMApiDAO",
+    "Audience": "TMWebMVC",
+    "Subject":  "JwtServiceAccessToken"
+  }
 }
